# Excellia-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXCELLIA_FEATURES.md  EXCELLIA_MCP_PLAN.md  README.md  README_RUNNER.md  SECURITY.md  pyproject.toml
docs/: EXCELLIA_MCP_PLAN.md  RUNNING.md  architecture_post.md  local_agent_demo.md  recording_script.md
docs/images/: README.md
examples/: README.md  make_messy_vendors.py  messy_vendors.xlsx
excellia/: __init__.py
excellia/addin/: README.md  __init__.py  serve.py
excellia/addin/static/: functions.html  functions.js  functions.json  manifest.xml  taskpane.html  taskpane.js
excellia/api/: README.md  jobs.py  main.py  schemas.py
excellia/core/: README.md  __init__.py  anomaly.py  ask.py  clean.py  fraud.py  ingest.py  kyc.py  llm.py  models.py  reconcile.py  report.py  store.py  transform.py  validate.py
excellia/local_agent/: README.md  agent.py
excellia/mcp_server/: README.md  server.py
excellia/webapp/: README.md  app.js  index.html  styles.css
project concept/: Limestone README.md  LimestonePROJECT_KNOWLEDGE.md  addin PROJECT_KNOWLEDGE.md  addin_PROJECT_KNOWLEDGE.md  addin_concept.md  excellio demp PROJECT_KNOWLEDGE.md  kycDocumentation.md  lmsDocumentation.md
tests/: conftest.py  test_addin.py  test_api_errors.py  test_api_v2.py  test_api_v3.py  test_ask.py  test_bigfile.py  test_builtin_rules.py  test_clean.py  test_core.py  test_fraud.py  test_imports.py  test_kyc.py  test_llm.py  test_mcp_integration.py  test_reconcile_pro.py  test_report.py  test_store.py  test_transform.py  test_webapp.py
(+1 files in other folders)
